<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="335dp"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:src="@drawable/ic_update_bg" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="44dp"
            android:includeFontPadding="false"
            android:text="@string/update_title"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_alignStart="@id/tvTitle"
            android:layout_marginTop="12dp"
            android:includeFontPadding="false"
            android:text="@string/update_version"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:id="@+id/line_view"
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:layout_alignTop="@id/tvVersion"
            android:layout_alignBottom="@id/tvVersion"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/tvVersion"
            android:background="@color/white" />


        <TextView
            android:id="@+id/tvFileSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvVersion"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/line_view"
            android:text="@string/update_size"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_confirm_sure_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvContentTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:includeFontPadding="false"
            android:text="更新内容:"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:includeFontPadding="false"
            android:maxHeight="160dp"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/tvForceUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:text="你需要更新应用才能继续使用"
            android:textColor="@color/color_FF7F2D"
            android:textSize="12sp" />

        <com.open.hule.library.view.NumberProgressBar
            android:id="@+id/nbpProgress"
            style="@style/NumberProgressBar_Default"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:progress_current="0"
            app:progress_max="100"
            app:progress_reached_bar_height="5dp"
            app:progress_reached_color="@color/common_text_strong"
            app:progress_text_color="@color/common_text_strong"
            app:progress_text_offset="1dp"
            app:progress_text_size="12sp"
            app:progress_text_visibility="visible"
            app:progress_unreached_bar_height="5dp"
            app:progress_unreached_color="@color/color_E3E4ED" />

        <LinearLayout
            android:id="@+id/llEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdateLater"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_update_cancel"
                android:text="@string/update_later"
                android:textColor="@color/color_999999"
                android:textSize="15sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnUpdateNow"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_update_sure"
                android:text="@string/update_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnCancelUpdate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/shape_update_cancel"
                android:text="@string/down_cancel"
                android:textColor="@color/updateColor"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>

        <Space
            android:id="@+id/sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>